istio_lb_tcp/deploy/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-app-gateway
  labels:
    istio: rabbitmq-app-gateway
    app: rabbitmq-app-gateway
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  - port: 443
    name: https
  selector:
    app: rabbitmq-app-gateway
    istio: rabbitmq-app-gateway
