istio_lb_tcp/deploy/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-app
  labels:
    app: rabbitmq-app
    service: rabbitmq-app
spec:
  ports:
    - port: 15672
      name: http
    - port: 5672
      name: tcp
  selector:
    app: rabbitmq-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-app-v1
  labels:
    app: rabbitmq-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
      version: v1
  template:
    metadata:
      labels:
        app: rabbitmq-app
        version: v1
    spec:
      serviceAccountName: bookinfo-rabbitmq-app
      containers:
        - name: rabbitmq-app
          image: rabbitmq:3.8.2-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
            - containerPort: 5672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-app-v2
  labels:
    app: rabbitmq-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-app
      version: v2
  template:
    metadata:
      labels:
        app: rabbitmq-app
        version: v2
    spec:
      serviceAccountName: bookinfo-rabbitmq-app
      containers:
        - name: rabbitmq-app
          image: rabbitmq:3.8.2-management
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 15672
            - containerPort: 5672
