istio_lb_tcp/deploy/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: rabbitmq-ingress
spec:
  # selector:
  #   istio: ingressgateway # use Istio default gateway implementation
  selector:
    app: rabbitmq-ingress-gateway
  servers:
    - port:
        number: 15672
        name: http
        protocol: HTTP
      hosts:
        - "*"
