istio_lb_tcp/deploy/route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: rabbitmq-app
spec:
  host: rabbitmq-app
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rabbitmq-app
spec:
  gateways:
    - rabbitmq-app-gateway
  hosts:
    - "*"
  http:
    - match:
       - port: 80
      route:
          - destination:
              host: rabbitmq-app
              subset: v1
              port:
                number: 15672
            weight: 50
          - destination:
              host: rabbitmq-app
              port:
                number: 15672
              subset: v2
            weight: 50
  # tcp:
  #    - match:
  #        - port: 5672
  #      route:
  #        - destination:
  #            host: rabbitmq-app
  #            subset: v1
  #            port:
  #              number: 5672
  #          weight: 50
  #        - destination:
  #            host: rabbitmq-app
  #            port:
  #              number: 5672
  #            subset: v2
  #          weight: 50
